tests/ok/prelude-slice-view.ari
use std as core;

fn score(slice: Slice[i64]) -> i64 {
  return ptr_load(slice.data) + slice.len;
}

fn qualified(slice: std::Slice[i64]) -> i64 {
  return std::mem::ptr_load(slice.data) + slice.len;
}

fn aliased(slice: core::Slice[i64]) -> i64 {
  return core::mem::ptr_load(slice.data) + slice.len;
}

fn main() -> i64 {
  var first = 5;
  var second = 7;
  var third = 11;
  let one: Slice[i64] = slice((ref mut first) as ptr i64, 1);
  let two: std::Slice[i64] = std::slice((ref mut second) as ptr i64, 2);
  let three: core::Slice[i64] = core::slice((ref mut third) as ptr i64, 3);
  return score(one) + qualified(two) + aliased(three);
}
